update to index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,10 +28,10 @@
           <a href="appeal/save-and-return/">Save and return</a>
         </li>
         <li>
-          GOV.UK guidance
+          GOV.UK guidance (needs review)
         </li>
         <li>
-          Service offline
+          Service offline (needs review)
         </li>
       </ul>
 
@@ -43,13 +43,13 @@
           <a href="/appeal/has/">Householder</a>
         </li>
         <li>
-          Full planning
+          <a href="/appeal/full/">Full planning</a>
         </li>
         <li>
-          Enforcement
+          Enforcement (needs review)
         </li>
         <li>
-          Lawful development
+          Lawful development (needs review)
         </li>
       </ul>
     {% endset -%}
@@ -60,28 +60,12 @@
       </h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Emails
-      </h3>
-      <ul class="govuk-list govuk-list--bullet">
-
-        <li>
-          <a href="/manage/emails/">Emails summary</a>
-        </li>
-        <li>
-          <a href="/manage/emails/v1/service-invite">Service invite</a>
-        </li>
-        <li>
-          <a href="/manage/emails/v1/appeal-valid">Appeal started</a>
-        </li>
-        <li>
-          <a href="/manage/emails/v1/appeal-statements">Appeal statements (cross-copy)</a>
-        </li>
-      </ul>
-
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
         Common journeys and patterns
       </h3>
       <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="/manage/emails/">Emails</a>
+        </li>
         <li>
           <a href="manage/access/">Service start page</a>
         </li>
