--- a/app/views/appeal/full/v2/upload-documents/application.html
+++ b/app/views/appeal/full/v2/upload-documents/application.html
@@ -1,24 +1,18 @@
-{% extends '_layouts/layout-pins.html' %}
+{% extends '_layouts/layout-main.html' %}
+
+{% set title = 'Upload your application form sent to the local planning authority' %}
 
 {% block questions %}
-  {% if data['non-determination'] == 'true' %}
-    {% set title = 'Upload what your decision notice would have said' %}
-    <h1 class="govuk-heading-l">
-      {{ title }}
-    </h1>
-    <p>Upload a copy of what your decision notice would have said if you&rsquo;d decided the application.</p>
-  {% else %}
-    {% set title = 'Upload the planning officer&rsquo;s report' %}
-    <h1 class="govuk-heading-l">
-      {{ title | safe }}
-    </h1>
-    <p>Upload the planning officer&rsquo;s report to committee or delegated report on the application, and any other relevant documents or minutes.</p>
-  {% endif %}
+  <h1 class="govuk-heading-l">
+    {{ title }}
+  </h1>
 
+  <p>If you do not have your application form, you can find it by searching for your applications on your local planning authority&rsquo;s website.</p>
 
   {% set uploadHtml %}
     {{ govukFileUpload({
-      name: 'report-upload',
+      id: 'application',
+      name: 'application',
       classes: 'moj-multi-file-upload__input',
       label: {
         text: 'Upload a file',
@@ -64,7 +58,7 @@
       e.preventDefault();
 
       $('.moj-multi-file-upload__filename').each(function() {
-        $('<input name="report-upload" type="checkbox" value="'+ $(this).text() +'" checked="true" style="display: none">').insertBefore('.govuk-heading-l');
+        $('<input name="application" type="checkbox" value="'+ $(this).text() +'" checked="true" style="display: none">').insertBefore('.govuk-heading-l');
       });
 
       $(this).unbind('submit').submit();
