Fix routes and department to authority

--- a/app/views/appeal/full/v2/upload-documents/application-desc-correct.html
+++ b/app/views/appeal/full/v2/upload-documents/application-desc-correct.html
@@ -31,7 +31,7 @@
         checked: checked('application-desc-correct','Yes')
       },
       {
-        html: 'No, I agreed a new one with the local planning department',
+        html: 'No, I agreed a new one with the local planning authority',
         value: 'No',
         checked: checked('application-desc-correct','No'),
         conditional: {
