--- a/app/views/appeal/full/v2/confirmation.html
+++ b/app/views/appeal/full/v2/confirmation.html
@@ -14,7 +14,7 @@
       <p>We&rsquo;ve sent you a confirmation email with a link to download a copy of your appeal.</p>
 
       {{ govukInsetText({
-        html: '<p>You need to send a copy of your appeal to the local planning department.</p>'
+        html: '<p>You need to send a copy of your appeal to the local planning authority.</p>'
       }) }}
 
       <p>If you need to contact us, include your planning application number.</p>
