--- a/app/views/appeal/has/v2/declaration.html
+++ b/app/views/appeal/has/v2/declaration.html
@@ -19,7 +19,7 @@
       <p>You also confirm that, to the best of your knowledge, the details you are providing are correct.</p>
 
       {{ govukButton({
-        html: 'Accept and send',
+        html: 'Accept and submit',
         href: 'confirmation'
       }) }}
 
