--- a/app/views/appeal/full/v2/task-list__prepare.html
+++ b/app/views/appeal/full/v2/task-list__prepare.html
@@ -425,7 +425,7 @@
           html: 'Visibility'
         },
         value: {
-          html: 'No<br>'+data['site-visibilityy__details'] if data['site-visibilityy'] == 'No' else 'Yes'
+          html: 'No<br>'+data['site-visibility__details'] if data['site-visibility'] == 'No' else 'Yes'
         }
         if data['site-visibility-complete'] else
         {
