--- a/app/views/index.html
+++ b/app/views/index.html
@@ -49,7 +49,7 @@
           Enforcement (needs review)
         </li>
         <li>
-          Lawful development (needs review)
+          <a href="/appeal/ldc/">Lawful development certificate</a>
         </li>
       </ul>
     {% endset -%}
