--- a/app/views/appeal/ldc/v3/task-list__prepare.html
+++ b/app/views/appeal/ldc/v3/task-list__prepare.html
@@ -97,6 +97,31 @@
       } if data['appellant-check'] == 'Another individual',
       {
         key: {
+          html: 'Company name'
+        },
+        value: {
+          html: data['company-name'] or 'Acme Ltd'
+        }
+        if data['company-name-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'appeal-details/company-name?cya=true',
+              html: 'Change'
+            }
+            if data['company-name-complete'] else
+            {
+              href: 'appeal-details/company-name',
+              html: 'Answer'
+            }
+          ]
+        }
+      } if data['appellant-check'] == 'A company',
+      {
+        key: {
           html: 'Application reference'
         },
         value: {
@@ -115,6 +140,31 @@
             if data['lpa-reference-complete'] else
             {
               href: 'prepare-appeal/lpa-reference',
+              html: 'Answer'
+            }
+          ]
+        }
+      },
+      {
+        key: {
+          html: 'Enforcement notice'
+        },
+        value: {
+          html: data['enforcemnet-notice'] or 'No'
+        }
+        if data['enforcement-notice-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'appeal-details/enforcement-notice?cya=true',
+              html: 'Change'
+            }
+            if data['enforcement-notice-complete'] else
+            {
+              href: 'appeal-details/enforcement-notice',
               html: 'Answer'
             }
           ]
@@ -145,181 +195,6 @@
           ]
         }
       },
-      {
-        key: {
-          html: 'Site fully owned'
-        },
-        value: {
-          html: data['own-all'] or 'Yes'
-        }
-        if data['own-all-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'prepare-appeal/own-all?cya=true',
-              html: 'Change'
-            }
-            if data['own-all-complete'] else
-            {
-              href: 'prepare-appeal/own-all',
-              html: 'Answer'
-            }
-          ]
-        }
-      },
-      {
-        key: {
-          html: 'Site partially owned'
-        },
-        value: {
-          html: data['own-some'] or 'Yes'
-        }
-        if data['own-some-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'prepare-appeal/own-some?cya=true',
-              html: 'Change'
-            }
-            if data['own-some-complete'] else
-            {
-              href: 'prepare-appeal/own-some',
-              html: 'Answer'
-            }
-          ]
-        }
-      } if data['own-all'] == 'No',
-      {
-        key: {
-          html: 'All owners known'
-        },
-        value: {
-          html: data['own-others'] or 'Yes'
-        }
-        if data['own-others-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'prepare-appeal/own-others?cya=true',
-              html: 'Change'
-            }
-            if data['own-others-complete'] else
-            {
-              href: 'prepare-appeal/own-others',
-              html: 'Answer'
-            }
-          ]
-        }
-      } if data['own-all'] == 'No',
-      {
-        key: {
-          html: 'Owners told'
-        },
-        value: {
-          html: 'Yes'
-        }
-        if data['owners-notified-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'prepare-appeal/owners-notified?cya=true',
-              html: 'Change'
-            }
-            if data['owners-notified-complete'] else
-            {
-              href: 'prepare-appeal/owners-notified',
-              html: 'Answer'
-            }
-          ]
-        }
-      } if data['own-all'] == 'No' and data['own-others'] == 'Yes',
-      {
-        key: {
-          html: 'Attempted to identify owners'
-        },
-        value: {
-          html: 'Yes'
-        }
-        if data['owners-searched-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'prepare-appeal/owners-searched?cya=true',
-              html: 'Change'
-            }
-            if data['owners-searched-complete'] else
-            {
-              href: 'prepare-appeal/owners-searched',
-              html: 'Answer'
-            }
-          ]
-        }
-      } if data['own-all'] == 'No' and (data['own-others'] == 'Some' or data['own-others'] == 'No'),
-      {
-        key: {
-          html: 'Advertised appeal'
-        },
-        value: {
-          html: 'Yes'
-        }
-        if data['owners-advertised-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'prepare-appeal/owners-advertised?cya=true',
-              html: 'Change'
-            }
-            if data['owners-advertised-complete'] else
-            {
-              href: 'prepare-appeal/owners-advertised',
-              html: 'Answer'
-            }
-          ]
-        }
-      } if data['own-all'] == 'No' and (data['own-others'] == 'Some' or data['own-others'] == 'No'),
-      {
-        key: {
-          html: 'Owners told'
-        },
-        value: {
-          html: 'Yes'
-        }
-        if data['owners-notified-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'prepare-appeal/owners-notified?cya=true',
-              html: 'Change'
-            }
-            if data['owners-notified-complete'] else
-            {
-              href: 'prepare-appeal/owners-notified',
-              html: 'Answer'
-            }
-          ]
-        }
-      } if data['own-all'] == 'No' and data['own-others'] == 'Some',
       {
         key: {
           html: 'Visibility'
@@ -369,7 +244,182 @@
             }
           ]
         }
-      }
+      },
+      {
+        key: {
+          html: 'Site usage'
+        },
+        value: {
+          html: data['site-usage'] or 'Residential'
+        }
+        if data['site-usage-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'appeal-details/site-usage?cya=true',
+              html: 'Change'
+            }
+            if data['site-usage-complete'] else
+            {
+              href: 'appeal-details/site-usage',
+              html: 'Answer'
+            }
+          ]
+        }
+      },
+      {
+        key: {
+          html: 'Proposed work' if data['section'] == '26H' else 'Proposed use, operation or activity'
+        },
+        value: {
+          html: data['proposed-usage'] or 'Theme park'
+        }
+        if data['proposed-usage-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'appeal-details/proposed-usage?cya=true',
+              html: 'Change'
+            }
+            if data['proposed-usage-complete'] else
+            {
+              href: 'appeal-details/proposed-usage',
+              html: 'Answer'
+            }
+          ]
+        }
+      } if data['section'] == '192' or data['section'] == '26H',
+      {
+        key: {
+          html: 'Proposal already started'
+        },
+        value: {
+          html: data['proposal-started'] or 'Yes'
+        }
+        if data['proposal-started-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'appeal-details/proposal-started?cya=true',
+              html: 'Change'
+            }
+            if data['proposal-started-complete'] else
+            {
+              href: 'appeal-details/proposal-started',
+              html: 'Answer'
+            }
+          ]
+        }
+      } if data['section'] == '192' or data['section'] == '26H',
+      {
+        key: {
+          html: 'Appeal procedure'
+        },
+        value: {
+          html: data['procedure'] or 'Written representations'
+        }
+        if data['procedure-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'prepare-appeal/procedure?cya=true',
+              html: 'Change'
+            }
+            if data['procedure-complete'] else
+            {
+              href: 'prepare-appeal/procedure',
+              html: 'Answer'
+            }
+          ]
+        }
+      },
+      {
+        key: {
+          html: data['procedure']+' reasons'
+        },
+        value: {
+          html: data['procedure-reason'] or 'My reasons…'
+        }
+        if data['procedure--reason-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'prepare-appeal/procedure--reason?cya=true',
+              html: 'Change'
+            }
+            if data['procedure--reason-complete'] else
+            {
+              href: 'prepare-appeal/procedure--reason',
+              html: 'Answer'
+            }
+          ]
+        }
+      } if data['procedure'] == 'Inquiry' or data['procedure'] == 'Hearing',
+      {
+        key: {
+          html: 'Inquiry length'
+        },
+        value: {
+          html: (data['procedure-lenth'] or '5')+' days'
+        }
+        if data['procedure--length-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'prepare-appeal/procedure--length?cya=true',
+              html: 'Change'
+            }
+            if data['procedure--length-complete'] else
+            {
+              href: 'prepare-appeal/procedure--length',
+              html: 'Answer'
+            }
+          ]
+        }
+      } if data['procedure'] == 'Inquiry',
+      {
+        key: {
+          html: 'Inquiry witnesses'
+        },
+        value: {
+          html: (data['procedure-witnesses'] or '2')
+        }
+        if data['procedure--witnesses-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'prepare-appeal/procedure--witnesses?cya=true',
+              html: 'Change'
+            }
+            if data['procedure--witnesses-complete'] else
+            {
+              href: 'prepare-appeal/procedure--witnesses',
+              html: 'Answer'
+            }
+          ]
+        }
+      } if data['procedure'] == 'Inquiry'
     ]
   }) }}
 </li>
