--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,11 +28,15 @@
           <a href="appeal/save-and-return/">Save and return</a>
         </li>
         <li>
+          <a href="/appeal/service/">Planned maintenance</a>
+        </li>
+        <li>
           GOV.UK guidance
         </li>
         <li>
           Service offline
         </li>
+
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
