--- a/app/views/interested/comment/v6/documents-check.html
+++ b/app/views/interested/comment/v6/documents-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'Do you have additional documents to support your comments?' %}
+{% set title = 'Do you have additional documents to support your comment?' %}
 
 {% set nav = true %}
 
