--- a/app/views/interested/comment/v6/your-name.html
+++ b/app/views/interested/comment/v6/your-name.html
@@ -39,7 +39,7 @@
         </legend>
 
         <p class="govuk-body">
-          We need your name to link you to your comments, this is helpful if you need to contact us. We do not publish your name.
+          We need your name to link you to your comment, this is helpful if you need to contact us. We do not publish your name.
         </p>
 
         <!-- <div id="name-hint" class="govuk-hint">
