--- a/app/views/interested/find-appeal/v5/appeal-notice-email-full.html
+++ b/app/views/interested/find-appeal/v5/appeal-notice-email-full.html
@@ -55,21 +55,21 @@
 </p>
 
 <p class="govuk-body">
-  If you made comments on the application, they have been sent to the planning inspector. You do not need to send them again.
+  If you made a comment on the application, they have been sent to the planning inspector. You do not need to send them again.
 </p>
 
 <!-- <p class="govuk-body">
-  You can submit any new comments, relevant to the appeal, by following the link.
+  You can submit a new comment, relevant to the appeal, by following the link.
 </p> -->
 
 <p class="govuk-body">
   <a href="appeal-details?status=open&appeal=1&appealCode=012726" class="govuk-link">
-    View and comment on this appeal
+    https://appeals.planninginspectorate.gov.uk/appeals/012726?sc=935336894d43c80fa548fc4a01af3488
   </a>
 </p>
 
 <p class="govuk-body">
-  You must submit your comments by 11:59pm on {{ '14' | daysInFuture }}.
+  You must submit your comment by 11:59pm on {{ '14' | daysInFuture }}.
 </p>
 
 <!-- <h2 class="govuk-heading-m">
