--- a/app/views/manage/access/v1/start.html
+++ b/app/views/manage/access/v1/start.html
@@ -62,7 +62,7 @@
               appeal statements
             </li>
             <li>
-              final comments
+              final comment
             </li>
           </ol>
 
