--- a/app/views/interested/find-appeal/v5/guidance.html
+++ b/app/views/interested/find-appeal/v5/guidance.html
@@ -56,7 +56,7 @@
             </li>
             <li class="app-contents-list__list-item app-contents-list__list-item--dashed">
               <a href="#">
-                Your comments
+                Your comment
               </a>
             </li>
             <li aria-current="true" class="app-contents-list__list-item app-contents-list__list-item--dashed">
@@ -88,11 +88,11 @@
       <ul class="govuk-list govuk-list--bullet">
 
         <li>
-          view appeals that are open for comments and submit your comments
+          view appeals that are open for comment and submit your comment
         </li>
 
         <li>
-          view appeals that are closed for comments
+          view appeals that are closed for comment
         </li>
 
         <li>
@@ -126,15 +126,15 @@
       </ul>
 
       <h2 class="govuk-heading-m">
-        Guidance about your comments
+        Guidance about your comment
       </h2>
 
       <p class="govuk-body">
-        Any previous comments that you submitted as part of an application will be considered by the Planning Inspector. The local planning authority shares these with the Planning Inspectorate, so there is no need to submit repeat comments.
+        Any previous comment that you submitted as part of an application will be considered by the Planning Inspector. The local planning authority shares these with the Planning Inspectorate, so there is no need to submit repeat a comment.
       </p>
 
       <p class="govuk-body">
-        You must not include sensitive information. If you do include sensitive information, we’ll send them back to you. Comments that include sensitive information will not be included in the appeal.
+        You must not include sensitive information. If you do include sensitive information, we’ll send them back to you. A comment that includes sensitive information will not be included in the appeal.
       </p>
 
       {% include "_includes/sensitive-information-list.html" %}
@@ -143,12 +143,12 @@
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
           <span class="govuk-warning-text__assistive">Warning</span>
-          Your comments must not include inflammatory or abusive language.
+          Your comment must not include inflammatory or abusive language.
         </strong>
       </div>
 
       <!-- <p>
-        Your comments must not include inflammatory or abusive language.
+        Your comment must not include inflammatory or abusive language.
       </p> -->
 
       <a href="/interested/find-appeal/v5/appeal-search-address" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
