Updates for the interesyed parties route

--- a/app/views/_includes/appeal-content/full-appeal-meta.html
+++ b/app/views/_includes/appeal-content/full-appeal-meta.html
@@ -1,4 +1,6 @@
-<dl class="govuk-summary-list">
+<!-- <h2 class="govuk-heading-m">Appeal details</h2> -->
+
+<dl class="govuk-summary-list govuk-!-width-two-thirds">
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
@@ -36,7 +38,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key ">
-      Appellant
+      Applicant
     </dt>
     <dd class="govuk-summary-list__value">
       {% if data['appeal'] == 1 or data['appeal'] == 4 %}
@@ -78,76 +80,5 @@
       Written representations
     </dd>
   </div>
-
-  <div class="govuk-summary-list__row pins-summary-list__row--last">
-    <dt class="govuk-summary-list__key">
-      Appeal statement
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <a href="#" class="govuk-class">{{ data["appealsub-"+version+"-appealdocs-appealstatement"] or 'Appeal-statement.pdf' }}</a>
-    </dd>
-  </div>
-
-
-
-  <h2 class="govuk-heading-m">
-    Appeal submission
-  </h2>
-
-  <dl class="govuk-summary-list">
-
-    <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
-        Draft statement of common ground
-      </dt>
-      <dd class="govuk-summary-list__value">
-        <a href="#" class="govuk-link">Stament of common ground 11.08.2022.doc</a>
-      </dd>
-    </div>
-
-    <!-- <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">
-        Appeal statement
-      </dt>
-      <dd class="govuk-summary-list__value">
-        <a href="#" class="govuk-class">{{ data["appealsub-"+version+"-appealdocs-appealstatement"] or 'Appeal-statement.pdf' }}</a>
-      </dd>
-    </div> -->
-
-    <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">
-      Plans or drawings
-      </dt>
-      <dd class="govuk-summary-list__value">
-        <a href="javascript:preventDefault();" class="govuk-link">
-          {{ data["appealsub-"+version+"-appealdocs-plansdrawings"] or 'Appeal-outline.pdf' }}
-        </a>
-      </dd>
-    </div>
-
-    <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">
-        Planning obligation
-      </dt>
-      <dd class="govuk-summary-list__value">
-        No
-      </dd>
-    </div>
-
-    <div class="govuk-summary-list__row pins-summary-list__row--last">
-      <dt class="govuk-summary-list__key">
-      Supporting documents
-      </dt>
-      <dd class="govuk-summary-list__value">
-        <a href="javascript:preventDefault();" class="govuk-link">
-          {{ data["appealsub-"+version+"-appealdocs-supportingdocuments"] or 'Local petition for development.pdf'}}
-            {% if data["appealsub-"+version+"-appealdocs-supportingdocuments"] != false %}
-              <br>Site orientation.png
-            {% endif %}
-          <br>
-        </a>
-      </dd>
-    </div>
-
 
 </dl>
