--- a/app/views/_includes/appeal-content/full-appeal-data.html
+++ b/app/views/_includes/appeal-content/full-appeal-data.html
@@ -1,26 +1,18 @@
-<h2 class="govuk-heading-m">
-  Appeal submission
-</h2>
+<!-- <h2 class="govuk-heading-m">Appeal details</h2> -->
 
 <dl class="govuk-summary-list">
+  <h2 class="govuk-heading-m">
+    Appeal details
+  </h2>
 
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
-      Draft statement of common ground
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <a href="#" class="govuk-link">Stament of common ground 11.08.2022.doc</a>
-    </dd>
-  </div>
-
-  <!-- <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Appeal statement
     </dt>
     <dd class="govuk-summary-list__value">
       <a href="#" class="govuk-class">{{ data["appealsub-"+version+"-appealdocs-appealstatement"] or 'Appeal-statement.pdf' }}</a>
     </dd>
-  </div> -->
+  </div>
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
@@ -42,7 +34,7 @@
     </dd>
   </div>
 
-  <div class="govuk-summary-list__row pins-summary-list__row--last">
+  <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
     Supporting documents
     </dt>
@@ -57,13 +49,14 @@
     </dd>
   </div>
 
-</dl>
-
-<h2 class="govuk-heading-m">
-  Planning application
-</h2>
-
-<dl class="govuk-summary-list">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
+      Draft statement of common ground
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <a href="#" class="govuk-link">Stament of common ground 11.08.2022.doc</a>
+    </dd>
+  </div>
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
@@ -73,6 +66,13 @@
       Loft conversion of roof to existing dwelling
     </dd>
   </div>
+
+</dl>
+
+<dl class="govuk-summary-list">
+  <h2 class="govuk-heading-m">
+    Application
+  </h2>
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
