--- a/app/views/interested/find-appeal/index.html
+++ b/app/views/interested/find-appeal/index.html
@@ -21,6 +21,39 @@
       {{ title }}
     </h1>
 
+    {% set version = "6" %}
+
+    <h2 class="govuk-heading-m">
+      Version {{version}}
+      {{ govukTag({
+        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
+        text: 'In progress'
+      }) }}
+    </h2>
+
+    <p class="govuk-body">
+      This is the on-going design work for interested parties, finding and commenting on an appeal.
+    </p>
+
+    <p class="govuk-body">
+      Changes:
+    </p>
+
+    <ul class="govuk-list govuk-list--bullet">
+      <li>some content updates</li>
+      <li>URL in the IP email</li>
+      <li>only using tabs when there is a decision</li>
+      <li>changed some language ‘Comments’ > ‘Comment’ for the find journey</li>
+    </ul>
+
+    {{ govukButton({
+      html: 'View prototype',
+      href: 'v'+version+'/guidance',
+      isStartButton: true
+    }) }}
+
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
     {% set version = "5" %}
 
     <h2 class="govuk-heading-m">
@@ -53,6 +86,10 @@
       href: 'v'+version+'/guidance',
       isStartButton: true
     }) }}
+
+
+
+    <!-- below is the variables form -->
 
     {% set lpaForm %}
 
@@ -94,6 +131,7 @@
         }) }}
 
       </form>
+
     {% endset -%}
 
     {{ govukDetails({
