Index text updates

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -103,7 +103,7 @@
       </h2>
 
       <p class="govuk-body">
-        Interested parties can <a href="/interested/find-appeal/" class="govuk-link govuk-link--no-visited-state">find and comment on appeals</a>.
+        Interested parties can <a href="/interested/" class="govuk-link govuk-link--no-visited-state">find and comment on appeals</a>.
       </p>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
