--- a/app/views/interested/find-appeal/v5/appeal-decision.html
+++ b/app/views/interested/find-appeal/v5/appeal-decision.html
@@ -130,7 +130,7 @@
       </p>
 
       <p class="govuk-body">
-        A revised version of the National Planning Policy Framework (the Framework) was published in July 2021 and the main parties were given the opportunity to submit comment. The 2021 version of the Framework is referred to in the decision.
+        A revised version of the National Planning Policy Framework (the Framework) was published in July 2021 and the main parties were given the opportunity to submit comments. The 2021 version of the Framework is referred to in the decision.
       </p>
 
       <h2 class="govuk-heading-m">
