--- a/app/views/interested/index.html
+++ b/app/views/interested/index.html
@@ -41,14 +41,13 @@
 
     <ul class="govuk-list govuk-list--bullet">
       <li>some content updates</li>
-      <li>URL in the IP email</li>
       <li>only using tabs when there is a decision</li>
       <li>changed some language ‘Comments’ > ‘Comment’ for the find journey</li>
     </ul>
 
     {{ govukButton({
       html: 'View prototype',
-      href: 'v'+version+'/guidance',
+      href: 'find-appeal/v'+version+'/guidance',
       isStartButton: true
     }) }}
 
@@ -83,7 +82,7 @@
 
     {{ govukButton({
       html: 'View prototype',
-      href: 'v'+version+'/guidance',
+      href: 'find-appeal/v'+version+'/guidance',
       isStartButton: true
     }) }}
 
