--- a/app/views/_includes/appeal-content/full-appeal-details.html
+++ b/app/views/_includes/appeal-content/full-appeal-details.html
@@ -13,15 +13,14 @@
     </dd>
   </div>
 
-  <!-- <div class="govuk-summary-list__row">
+  <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Appeal statement
     </dt>
     <dd class="govuk-summary-list__value">
       <a href="#" class="govuk-class">{{ data["appealsub-"+version+"-appealdocs-appealstatement"] or 'Appeal-statement.pdf' }}</a>
     </dd>
-  </div> -->
-
+  </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
     Plans or drawings
