--- a/app/views/interested/comment/v7/confirmation.html
+++ b/app/views/interested/comment/v7/confirmation.html
@@ -1,8 +1,8 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set prototypeLinks = [{href: 'appeal-comment-confirmation', text: 'Comments confirmation'}] %}
+{% set prototypeLinks = [{href: 'appeal-comment-confirmation', text: 'Comment confirmation'}] %}
 
-{% set title = 'Comments submitted' %}
+{% set title = 'Comment submitted' %}
 
 {% set nav = true %}
 
