--- a/app/views/interested/comment/v7/your-email.html
+++ b/app/views/interested/comment/v7/your-email.html
@@ -26,7 +26,7 @@
   </h1>
 
   <p>
-    We’ll contact you by email if we need to discuss your comments.
+    We’ll contact you by email if we need to discuss your comment.
   </p>
 
   {{ govukInput({
