--- a/app/views/interested/find-appeal/v5/open-appeals.html
+++ b/app/views/interested/find-appeal/v5/open-appeals.html
@@ -48,7 +48,7 @@
     </p> -->
 
     <!-- <h2 class="govuk-heading-m">
-      Open for comment
+      Open for comments
     </h2> -->
 
     <!-- <p class="govuk-body">
@@ -92,7 +92,7 @@
             Appeal reference
           </th>
           <th class="govuk-table__header" scope="col">
-            Comment
+            Comments
           </th>
         </tr>
       </thead>
